# assemblylift-examples

./: .gitignore  assemblylift.toml
services/default-service/: service.toml
services/default-service/hello-world/: Cargo.toml
services/default-service/hello-world/src/: lib.rs
services/hello-service/: service.toml
services/hello-service/hello-world/: .gitignore  Cargo.toml
services/hello-service/hello-world/.cargo/: config
services/hello-service/hello-world/src/: lib.rs
services/todo/: service.toml
services/todo/create/: Cargo.toml
services/todo/create/src/: lib.rs
services/todo/delete/: Cargo.toml
services/todo/delete/.cargo/: config
services/todo/delete/src/: lib.rs
services/todo/get/: Cargo.toml
services/todo/get/src/: lib.rs
services/todo/get_all/: .gitignore  Cargo.toml
services/todo/get_all/src/: lib.rs
