# Generated with assemblylift-cli 0.1.0

[package]
name = "hello-world"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
direct-executor = "0.3.0"
serde_json = "1.0.53"
asml_core = { version = "0.1.0", package = "assemblylift-core-guest" }
asml_core_event = { version = "0.1.0", package = "assemblylift-core-event-guest" }
asml_awslambda = { version = "0.1.0", package = "assemblylift-awslambda-guest" }
asml_awslambda_iomod = { version = "0.1.0", package = "assemblylift-awslambda-iomod-guest" }
