[package]
name = "create"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
direct-executor = "0.3.0"
serde = "1.0.53"
serde_json = "1.0.53"
asml_core = { version = "0.2.0", package = "assemblylift-core-guest" }
asml_core_io = { version = "0.1.0", package = "assemblylift-core-io-guest" }
asml_awslambda = { version = "0.2.0", package = "assemblylift-awslambda-guest" }

asml_iomod_dynamodb = { version = "0.1.0", package = "assemblylift-iomod-dynamodb-guest", path = "../../../../assemblylift-iomod-stdlib/dynamodb/guest" }
asml_iomod_crypto = { version = "0.1.0", package = "assemblylift-iomod-crypto-guest", path = "../../../../assemblylift-iomod-stdlib/crypto/guest" }
